--- a/package.json.hbs
+++ b/package.json.hbs
@@ -32,6 +32,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.36.2",
     "@tanstack/react-table": "^8.20.5",
+    "embla-carousel-react": "^8.3.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
