--- a/src/components/ui/button.tsx.hbs
+++ b/src/components/ui/button.tsx.hbs
@@ -16,7 +16,7 @@ const buttonVariants = cva(
         destructive:
           "bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90",
         outline:
-          "border border-input hover:border-accent bg-background shadow-sm text-foreground hover:bg-accent/10 hover:text-accent-foreground",
+          "border border-input hover:border-accent bg-background shadow-sm text-foreground hover:bg-accent/10 hover:text-accent-foreground backdrop-blur-sm",
         secondary:
           "bg-secondary text-secondary-foreground shadow-sm hover:bg-secondary/80",
         blue: "bg-blue text-background shadow-sm hover:bg-blue/80",
