--- a/src/components/ui/combobox.tsx.hbs
+++ b/src/components/ui/combobox.tsx.hbs
@@ -17,16 +17,19 @@ type DataProps = {
   label: string;
   value: string;
   description: string;
+  disabled?: boolean;
 };
 
 type ComboboxProps = {
-  onChange: (value: string) => void;
+  onChange: (value: string | string[]) => void;
   id: string;
-  value: string;
+  value: string | string[];
   getData: (value: string) => Promise<DataProps[]>;
   parentClassName?: string;
   contentClassName?: string;
   placeholder?: string;
+  multiple?: boolean;
+  alwaysOpen?: boolean;
 };
 
 export function Combobox({
@@ -37,14 +40,17 @@ export function Combobox({
   parentClassName,
   contentClassName,
   placeholder = "Enter here",
+  multiple,
+  alwaysOpen,
 }: ComboboxProps) {
   const [showData, setShowData] = useState<DataProps[]>([]);
-  const [open, setOpen] = useState(false);
+  const [open, setOpen] = useState(alwaysOpen ? true : false);
   const [{ shadowInput, inputValue }, setInputValue] = useState<{
     shadowInput: string;
     inputValue: string;
   }>({ shadowInput: "", inputValue: "" });
   const [hoveredIndex, setHoveredIndex] = useState<number | null>(null);
+  const [selectedItems, setSelectedItems] = useState<DataProps[]>([]);
   const inputRef = useRef<HTMLInputElement>(null);
 
   const { isSuccess, data, isLoading } = useQuery({
@@ -110,99 +116,136 @@ export function Combobox({
     } else if (e.key === "Enter" && hoveredIndex !== null) {
       e.preventDefault();
       onChange(showData[hoveredIndex].value);
-      setOpen(false);
+      setOpen(alwaysOpen ? true : false);
+    }
+  };
+
+  const handleSelect = (item: DataProps) => {
+    if (multiple) {
+      setSelectedItems((prev) => {
+        const isSelected = prev.some(
+          (selectedItem) => selectedItem.value === item.value
+        );
+        let newSelectedItems;
+        if (isSelected) {
+          newSelectedItems = prev.filter(
+            (selectedItem) => selectedItem.value !== item.value
+          );
+        } else {
+          newSelectedItems = [...prev, item];
+        }
+        onChange(newSelectedItems.map((selectedItem) => selectedItem.value));
+        return newSelectedItems;
+      });
+      if (inputRef.current) {
+        inputRef.current.focus();
+        setOpen(true);
+      }
+    } else {
+      onChange(item.value);
     }
   };
 
   return (
-    <Popover open={open} onOpenChange={setOpen}>
-      <PopoverAnchor
-        asChild
-        className={cn("relative z-[100] w-full", parentClassName)}
-      >
-        <Input
-          ref={inputRef}
-          suffix={
-            <ChevronDown
-              className={cn(
-                "h-5 w-5 transition-all duration-500 ease-out !opacity-100 z-[100]",
-                open && "rotate-180"
-              )}
-            />
-          }
-          autoFocus
-          onClick={() => {
-            setOpen((prev) => !prev);
-            if (inputRef.current) {
-              inputRef.current.focus();
+    <div className={alwaysOpen ? "pb-56" : "h-fit"}>
+      <Popover open={open} onOpenChange={alwaysOpen ? () => {} : setOpen}>
+        <PopoverAnchor
+          asChild
+          className={cn("relative z-[100] w-full", parentClassName)}
+        >
+          <Input
+            ref={inputRef}
+            suffix={
+              <ChevronDown
+                className={cn(
+                  "h-5 w-5 transition-all duration-500 ease-out !opacity-100 z-[100]",
+                  open && "rotate-180"
+                )}
+              />
             }
-          }}
-          placeholder={placeholder}
-          value={open ? shadowInput : value}
-          onChange={handleInputChange}
-          onKeyDown={handleKeyDown}
+            autoFocus
+            onClick={() => {
+              setOpen((prev) => (alwaysOpen ? true : !prev));
+              if (inputRef.current) {
+                inputRef.current.focus();
+              }
+            }}
+            placeholder={placeholder}
+            value={open ? shadowInput : value}
+            onChange={handleInputChange}
+            onKeyDown={handleKeyDown}
+            key={id}
+          />
+        </PopoverAnchor>
+        <PopoverContent
           key={id}
-        />
-      </PopoverAnchor>
-      <PopoverContent
-        key={id}
-        forceMount
-        asChild
-        className={cn(
-          "w-[--radix-popper-anchor-width] p-0 [[data-radix-popper-content-wrapper]:has(&)]:h-0",
-          !open && "pointer-events-none",
-          contentClassName
-        )}
-      >
-        <div className={cn("h-40 py-2 px-2")}>
-          <ScrollArea>
-            <AnimatePresence>
-              {isLoading && (
-                <motion.div
-                  initial={ { opacity: 0 } }
-                  animate={ { opacity: 1 } }
-                  exit={ { opacity: 0 } }
-                  className="absolute size-full bg-slate-950/20 flex justify-center scale-[1.1] z-[1000]"
-                >
-                  <Loader2 className="animate-spin mt-5" />
-                </motion.div>
-              )}
-            </AnimatePresence>
-            {showData.length === 0 ? (
-              <div className="p-4 text-center text-sm text-muted-foreground">
-                No results found.
-              </div>
-            ) : (
-              <>
-                {showData?.map((item, index) => (
-                  <div
-                    onClick={() => onChange(item.value)}
-                    className={cn(
-                      "relative flex cursor-pointer select-none flex-col rounded-xl px-3 py-1.5 aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-selected:bg-accent aria-selected:text-accent-foreground hover:bg-foreground/[0.05] transition-all duration-300 ease-out",
-                      item.value == value &&
-                        "bg-foreground/[0.05] text-accent-foreground",
-                      hoveredIndex === index && "bg-foreground/[0.1]"
-                    )}
-                    key={index}
+          forceMount
+          asChild
+          className={cn(
+            "w-[--radix-popper-anchor-width] p-0 [[data-radix-popper-content-wrapper]:has(&)]:h-0",
+            multiple && "shadow-none mt-1",
+            !open && "pointer-events-none",
+            contentClassName
+          )}
+        >
+          <div className={cn("h-52 overflow-hidden py-2 px-2")}>
+            <ScrollArea className="h-full gap-2">
+              <AnimatePresence>
+                {isLoading && (
+                  <motion.div
+                    initial={{ opacity: 0 }}
+                    animate={{ opacity: 1 }}
+                    exit={{ opacity: 0 }}
+                    className="absolute size-full bg-slate-950/20 flex justify-center scale-[1.1] z-[1000]"
                   >
-                    <div className="pl-7 flex flex-col">
-                      <span className="font-medium">{item?.label}</span>
-                      <span className="text-sm text-foreground/60">
-                        {item.description}
-                      </span>
-                    </div>
-                    {item.value == value && (
-                      <span className="absolute start-3 top-0 flex z-[10] h-full items-center justify-center">
-                        <Check className="h-5 w-5" strokeWidth={1.2} />
-                      </span>
-                    )}
-                  </div>
-                ))}
-              </>
-            )}
-          </ScrollArea>
-        </div>
-      </PopoverContent>
-    </Popover>
+                    <Loader2 className="animate-spin mt-5" />
+                  </motion.div>
+                )}
+              </AnimatePresence>
+              {showData.length === 0 && !isLoading ? (
+                <div className="p-4 text-center text-sm text-muted-foreground">
+                  No results found.
+                </div>
+              ) : (
+                <>
+                  {showData?.map((item, index) => {
+                    const isChecked = multiple
+                      ? selectedItems.find(
+                          (selectedItem) => selectedItem.value == item.value
+                        )
+                      : item.value == value;
+                    const isActive = hoveredIndex === index;
+                    return (
+                      <div
+                        onClick={() => handleSelect(item)}
+                        className={cn(
+                          "mb-1 relative flex cursor-pointer select-none flex-col rounded-xl px-3 py-1.5 aria-disabled:pointer-events-none aria-disabled:opacity-50 aria-selected:bg-accent aria-selected:text-accent-foreground hover:bg-foreground/[0.05] transition-all duration-300 ease-out",
+                          isChecked &&
+                            "bg-foreground/[0.05] text-accent-foreground",
+                          isActive && "bg-foreground/[0.1]"
+                        )}
+                        key={index}
+                      >
+                        <div className="pl-7 flex flex-col">
+                          <span className="font-medium">{item?.label}</span>
+                          <span className="text-sm text-foreground/60">
+                            {item.description}
+                          </span>
+                        </div>
+                        {isChecked && (
+                          <span className="absolute start-3 top-0 flex z-[10] h-full items-center justify-center">
+                            <Check className="h-5 w-5" strokeWidth={1.2} />
+                          </span>
+                        )}
+                      </div>
+                    );
+                  })}
+                </>
+              )}
+            </ScrollArea>
+          </div>
+        </PopoverContent>
+      </Popover>
+    </div>
   );
-}  
+}
